git header working

--- a/starter/js/kata/src/app/header/header.component.html
+++ b/starter/js/kata/src/app/header/header.component.html
@@ -1,1 +1,9 @@
-<p>header works!</p>
+<div>
+  <a href="/">home</a>
+  &nbsp;|&nbsp;
+  <a href="/message">message</a>
+  &nbsp;|&nbsp;
+  <a href="/wall">wall</a>
+  &nbsp;|&nbsp;
+  <a href="/timeline">timeline</a>
+</div>
