try to get my components working, ran into cors issues while testing.  ran out of time. ending development

--- a/starter/js/kata/src/app/home/home.component.html
+++ b/starter/js/kata/src/app/home/home.component.html
@@ -1,1 +1,6 @@
-<p>home works!</p>
+<div>
+  <p>Katas Admin Panel</p>
+  <p>Add a message to a timeline on behalf of the user: <a href="/message">Add Message!</a> </p>
+  <p>Get the timeline of a user: <a href="/timeline">View Timeline!</a></p>
+  <p>Get the wall of a user: <a href="/wall">View Wall!</a></p>
+</div>
