--- a/starter/js/kata/src/app/message/message.component.html
+++ b/starter/js/kata/src/app/message/message.component.html
@@ -1,1 +1,14 @@
-<p>message works!</p>
+<div>
+  <p>Add Message</p>
+  <div>
+    <label>Username</label>
+    <input type="text" #username>
+  </div>
+  <div>
+    <label>Message</label>
+    <textarea rows="3" cols="50" #message></textarea>
+  </div>
+  <div>
+    <input type="submit" value="Submit" (click)="addMessage()">
+  </div>
+</div>
